<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1548211402114688</string>

    <string name="app_name">MarcoPolo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="init_log_in_text">Log In</string>
    <string name="init_sign_up_text">Sign Up</string>
    <string name="back_button_text">  &lt;</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="username_and_phone_placeholder">Username or Phone #</string>
    <string name="username_placeholder">Username</string>
    <string name="phone_placeholder">Phone #</string>
    <string name="password_placeholder">Password</string>
    <string name="enter">Enter</string>
    <string name="sign_up_intro">Welcome to Marco Polo!\nCreate an account below.</string>
    <string name="edit_info_title">Edit Information</string>
    <string name="edit_username_placeholder">Change Username</string>
    <string name="edit_phone_placeholder">Change Phone #</string>
    <string name="edit_password_placeholder">Change Password</string>
    <string name="about_button_text">About</string>
    <string name="edit_info_button_text">Edit Info</string>
    <string name="statistics_button_text">Statistics</string>
    <string name="contact_us_button_text">Contact Us</string>
    <string name="rate_button_text">Rate</string>
    <string name="settings_distance_text">Distance:</string>
    <string name="distance_kilometer">Kilometer</string>
    <string name="distance_mile">Mile</string>
    <string name="searchable">Searchable</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="location_services">Location Services</string>
    <string name="logout">Logout</string>
    <string name="verification_title">Enter your verification code</string>
    <string name="verification_resend_code">Resend Code</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="invite_search_bar_placeholder">Find MarcoPolo User</string>
    <string name="share">Share</string>
    <string name="invite">INVITE</string>
    <string name="forgot_password_dialog_title">FORGOT PASSWORD</string>
    <string name="forgot_password_dialog_header">Enter your phone number below</string>
    <string name="edit_information">Edit Information</string>
    <string name="change_username">Change Username</string>
    <string name="change_phone">Change Phone</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="new_phone">New Phone #</string>
    <string name="autopolo">AUTO-POLO</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="choose_your_polo">Choose your Polo</string>
    <string name="add_a_timer">Add a timer?</string>
    <string name="since_you_been_gone">Since you\'ve been gone</string>
    <string name="record">Record</string>
    <string name="ok">OK</string>

</resources>
