<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blue">

    <RelativeLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:background="@null"
            android:text="@string/back_button_text"
            android:textSize="35sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical|end"
            android:background="@null"
            android:text="@string/about_button_text"
            android:textSize="25sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_buttons_section"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/settings_header"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/settings_edit_info_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/edit_info_button_text"
            android:textColor="@color/white"
            android:background="@drawable/darkening_green"/>

        <Button
            android:id="@+id/statistics_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/settings_edit_info_button"
            android:gravity="center"
            android:text="@string/statistics_button_text"
            android:textColor="@color/white"
            android:background="@color/dark_green"/>

        <Button
            android:id="@+id/contact_us_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/statistics_button"
            android:gravity="center"
            android:text="@string/contact_us_button_text"
            android:textColor="@color/white"
            android:background="@color/green" />

        <Button
            android:id="@+id/rate_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/contact_us_button"
            android:gravity="center"
            android:text="@string/rate_button_text"
            android:textColor="@color/white"
            android:background="@color/dark_green"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/distance_section"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/settings_buttons_section"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/distance_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/settings_distance_text"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/center_shim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/distance_kilometers_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@+id/distance_title"
            android:layout_toLeftOf="@+id/center_shim"
            android:background="@color/green"
            android:text="@string/distance_kilometer"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/distance_miles_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@+id/distance_title"
            android:layout_toRightOf="@+id/center_shim"
            android:background="@color/dark_green"
            android:text="@string/distance_mile"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/distance_section">

        <TextView
            android:id="@+id/searchable_title"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:gravity="center|left"
            android:text="@string/searchable"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/searchable_switch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/searchable_title" />

        <TextView
            android:id="@+id/push_notifications_title"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/searchable_title"
            android:gravity="center|left"
            android:text="@string/push_notifications"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/push_notifications_switch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/searchable_title"
            android:layout_toRightOf="@+id/push_notifications_title"/>

        <TextView
            android:id="@+id/location_services_title"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/push_notifications_title"
            android:gravity="center|left"
            android:text="@string/location_services"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/location_services_switch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/push_notifications_title"
            android:layout_toRightOf="@+id/location_services_title"
            android:checked="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/settings_logout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/darkening_red"
            android:text="@string/logout"
            android:textSize="40dp"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
