<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/back_button_text"
            android:textSize="30dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/edit_info_title"
            android:textSize="20dp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_info_username_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/edit_username_placeholder"
            android:textColor="@color/white"
            android:background="@color/green"/>

        <EditText
            android:id="@+id/edit_info_phone_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/sign_up_username_field"
            android:gravity="center"
            android:text="@string/edit_phone_placeholder"
            android:textColor="@color/white"
            android:background="@color/dark_green"/>

        <EditText
            android:id="@+id/edit_info_password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/edit_password_placeholder"
            android:textColor="@color/white"
            android:background="@color/green"
            android:password="false" />
    </RelativeLayout>
</RelativeLayout>
