<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/record_audio_cancel_button"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"
        android:textSize="14sp" />

    <Button
        android:id="@+id/record_audio_main_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/record"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/record_audio_ok_button"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ok"
        android:textSize="14sp" />
</RelativeLayout>