<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/back_button_text"
            android:textSize="30dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/edit_info_title"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@null"
            android:text="@string/edit_information"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit_info_username_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/change_username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/darkening_green" />

        <Button
            android:id="@+id/edit_info_phone_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_info_username_button"
            android:gravity="center"
            android:text="@string/change_phone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/darkening_dark_green" />

        <Button
            android:id="@+id/edit_info_password_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_info_phone_button"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/darkening_green" />
    </RelativeLayout>
</RelativeLayout>
