<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/back_button_text"
            android:textSize="30sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_password_old_password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/old_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@color/green"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_password_new_password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/new_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@color/dark_green"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_password_confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@color/green"
            android:inputType="textPassword" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/edit_password_enter_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/darkening_green"
            android:text="@string/change_password"
            android:textSize="35sp"
            android:textColor="@color/white"
            />
    </RelativeLayout>

</RelativeLayout>
