<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/back_button_text"
            android:textSize="30dp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/forgot_password_username_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:hint="@string/username_placeholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@color/green"/>

        <EditText
            android:id="@+id/forgot_password_phone_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:hint="@string/phone_placeholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@color/dark_green"
            android:password="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/forgot_password_enter_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/darkening_green"
            android:text="@string/enter"
            android:textSize="40dp"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</RelativeLayout>
