<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <RelativeLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/back"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/back_button_text"
            android:textSize="35dp"
            android:textColor="@color/white" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/invite_search_bar_placeholder"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_yellow">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/share"
            android:textSize="40dp"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/green">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:background="@null"
                android:text="Akash Gupta"
                android:textColor="@color/white"
                android:textSize="30dp"/>

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:text="(650) 391-8050"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/invite"
                android:textColor="@color/white"
                android:textSize="15dp"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
